aneeshbhat1-Salesforce/src/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Aggregate__c</fullName>
        <formula>(( Marks_1st_Year__c  +  Marks_2nd_Year__c ) / 2000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aggregate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>College__c</fullName>
        <label>College</label>
        <referenceTo>College__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ContactType__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ContactType</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Contact_Type__c</field>
                <operation>equals</operation>
                <value>HOD, Student</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students (ContactType)</relationshipLabel>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Details__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Details</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>E&amp;E</fullName>
                </value>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
                <value>
                    <fullName>MECHANICAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExPax_Student__c</fullName>
        <label>ExPax Student</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InformParent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>InformParent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Marks_1st_Year__c</fullName>
        <label>Marks 1st Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Marks_2nd_Year__c</fullName>
        <label>Marks 2nd Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Student__c</fullName>
        <label>New Student</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <label>Parent Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parentt_MailID__c</fullName>
        <label>Parent MailID</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Address__c</fullName>
        <label>Student Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_Contact_No__c</fullName>
        <label>Student Contact No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Mobile_No__c</fullName>
        <label>Student Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Student_Name__c</fullName>
        <label>Student Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1st Year</fullName>
                </value>
                <value>
                    <fullName>2nd Year</fullName>
                </value>
                <value>
                    <fullName>3rd Year</fullName>
                </value>
                <value>
                    <fullName>4th Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>aneeshID__c</fullName>
        <externalId>true</externalId>
        <label>aneeshID</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CODE{0}</displayFormat>
        <label>Student Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>Ex_Pax</fullName>
        <active>true</active>
        <label>Ex Pax</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Student</fullName>
        <active>true</active>
        <label>New Student</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>